--- a/d01/ex07/Makefile
+++ b/d01/ex07/Makefile
@@ -10,4 +10,26 @@
 #                                                                              #
 # **************************************************************************** #
 
+NAME = program
 
+FLAGS = -Wall -Wextra -Werror
+
+SRC = main.cpp
+
+OBJ = $(SRC:.cpp=.o)
+
+all : $(NAME)
+
+$(NAME) :
+	clang++ -c $(SRC) $(FLAGS)
+	clang++ $(OBJ) -o $(NAME)
+
+clean :
+	rm -rf $(OBJ)
+
+fclean : clean
+	rm -rf $(NAME)
+
+re : fclean all
+
+.PHONY: all clean fclean re
